Fix overflow text shift on last Sticky Bits pick

--- a/src/components/week/sticky-bits/_sticky-bits.scss
+++ b/src/components/week/sticky-bits/_sticky-bits.scss
@@ -148,7 +148,6 @@
   width: 100%;
 
   &:last-of-type {
-    box-sizing: content-box;
     padding-bottom: 50vh;
   }
 
